--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   },
   "require": {
     "syspass/extension-installer-plugin": "*",
-    "php": "~7.0 || ~7.1 || ~7.2"
+    "php": "~7.0 || ~7.1 || ~7.2",
+    "bacon/bacon-qr-code": "^2.0"
   },
   "extra": {
     "type": "web"
