* [MOD] Update minimum PHP required version * [MOD] Update composer version * [MOD] Update sysPass' compatible version
Signed-off-by: Rubén D <nuxsmin@yspass.org>

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require": {
     "syspass/extension-installer-plugin": "^2.0",
-    "php": "~7.2 || ~7.3 || ~7.4",
+    "php": "~7.3 || ~7.4",
     "bacon/bacon-qr-code": "^2.0",
     "ext-gettext": "*"
   },
